Changes for 1.5.1
* Possibly correcting some hidden bugs in MoveValidator. (veqryn)

* Created new CanalAttachment option, excludedUnits, which allows the specifying of specific units which will not be validated for. (veqryn)

* Created new RelationshipTypeAttachment option, canMoveThroughCanals, which allows a player to move through a canal owned by the other player. (veqryn)

* Removed restrictions that had canals only checked for Sea Movement. They now check for all movement, and therefore there can now be 'land' canals that require sea zones, or land requiring other land, or sea requiring sea, etc. (veqryn)

* Creating a better error message for when users do not have a map, but try to join the game anyway. (frigoref)

* Getting history panel to stop closing clicked on expanded paths every time a there is a new event or change, when your mouse is over the history panel. (frigoref)

* Correcting bad history log messages for Edit mode. (veqryn)

* Refactored Trigger Attachment class again to allow triggers to fire other triggers with certain options and properties. (veqryn)

* Created new Trigger Attachment option, activateTrigger, which will allow a trigger to fire other triggers. (veqryn)

* Preliminary work on ability to fire triggers from other triggers. (veqryn)

* Fixing NoSuchElementException in Kamikaze attack ui. (veqryn)

* Created new RelationshipTypeAttachment option, canMoveIntoDuringCombatMove, which stops combat-phase movement, but allows non-combat-phase movement. (veqryn)

* Fixing Chat Panel player name area to be correct size to hold all player names and national flags. (frigoref)

* Adding Alpha+3 National Objectives to xml. (veqryn)

* Added "originalNoWater" as an option for conditions that test territories. (veqryn)

* Fixed bug where paratroopers could not move over enemy sea zones or captured sea zones. (veqryn)
